--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  build_runner: ^2.6.0
   flutter:
     sdk: flutter
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
